deployments/pathweb/tautulli/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  namespace: media-services
  labels:
    app.kubernetes.io/name: tautulli
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  serviceName: tautulli-headless
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli
    spec:
      containers:
      - name: tautulli
        image: linuxserver/tautulli:latest
        ports:
        - containerPort: 8181
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        resources:
          requests:
            cpu: "10m"
            memory: "150Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
