deployments/pathweb/tautulli/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli-headless
  namespace: media-services
  labels:
    app.kubernetes.io/name: tautulli
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: tautulli
  ports:
  - port: 8181
    targetPort: http
    name: http
