deployments/pathweb/tautulli/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/name: tautulli
    external-dns: local-pdns
spec:
  parentRefs:
  - name: rfhome-services-gateway
    namespace: home-network
    sectionName: https
    kind: Gateway
  hostnames:
  - tautulli.services.home.yrf.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: ak-outpost-authentik-embedded-outpost
    backendRefs:
    - name: tautulli-headless
      port: 8181
  - matches:
    - path:
        type: PathPrefix
        value: /images/
    backendRefs:
    - name: tautulli-headless
      port: 8181
