deployments/pathweb/tautulli/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/name: tautulli
    external-dns: local-pdns
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: home-network-ak-outpost-authentik-embedded-outpost@kubernetescrd
spec:
  ingressClassName: traefik-traefik
  rules:
  - host: tautulli.services.home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tautulli-headless
            port:
              name: http
  tls:
  - hosts:
    - tautulli.services.home.yrf.me
    secretName: services-wildcard-cert
